# ALNS

./: .codacy.yml  .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  LICENSE.md  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  setuptools-72.2.0-py3-none-any.whl
.github/: CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE_REQUEST.md
.github/workflows/: alns.yaml  alns.yml  draft-pdf.yml  python-app.yml
alns/: ALNS.py  AdaptiveStrategy.py  CallbackFlag.py  CallbackMixin.py  Outcome.py  Result.py  State.py  Statistics.py  Weights.py  __init__.py  accept.py  exception_warnings.py  exceptions.py  select_operator.py  show_versions.py
alns/accept/: AcceptanceCriterion.py  AdaptiveThreshold.py  AlwaysAccept.py  GreatDeluge.py  HillClimbing.py  LateAcceptanceHillClimbing.py  MovingAverageThreshold.py  NonLinearGreatDeluge.py  RandomAccept.py  RandomWalk.py  RecordToRecordTravel.py  SimulatedAnnealing.py  ThresholdAccept.py  ThresholdAcceptance.py  WorseAccept.py  __init__.py  update.py
alns/accept/tests/: test_adaptive_threshold.py  test_great_deluge.py  test_hill_climbing.py  test_late_acceptance_hill_climbing.py  test_moving_average_threshold.py  test_non_linear_great_deluge.py  test_random_accept.py  test_random_walk.py  test_record_to_record_travel.py  test_simulated_annealing.py  test_threshold_accept.py  test_threshold_acceptance.py  test_update.py  test_worse_accept.py
alns/criteria/: AcceptanceCriterion.py  HillClimbing.py  RecordToRecordTravel.py  RecordTravel.py  SimulatedAnnealing.py  update.py
alns/criteria/tests/: test_hill_climbing.py  test_record_to_record_travel.py  test_simulated_annealing.py  test_update.py
alns/enums/: WeigthIndex.py  __init__.py
alns/select/: AlphaUCB.py  MABSelector.py  OperatorSelection.py  OperatorSelectionScheme.py  RandomSelect.py  RouletteWheel.py  SegmentedRouletteWheel.py  SegmentedWeights.py  SelectionScheme.py  SimpleWeights.py  WeightScheme.py  __init__.py
alns/select/tests/: test_alpha_ucb.py  test_mab.py  test_mab_selector.py  test_random_select.py  test_roulette_wheel.py  test_segmented_roulette_wheel.py  test_segmented_weights.py  test_simple_weights.py
alns/stop/: MaxIterations.py  MaxRuntime.py  NoImprovement.py  StoppingCriterion.py  __init__.py
alns/stop/tests/: test_max_iterations.py  test_max_runtime.py  test_no_improvement.py
alns/stopping_criteria/: MaxIterations.py  MaxRuntime.py  StoppingCriterion.py  __init__.py
alns/stopping_criteria/tests/: test_max_iterations.py  test_max_runtime.py
alns/tests/: conftest.py  states.py  test_accept.py  test_accept_parameter_validation.py  test_alns.py  test_alns_operators.py  test_alns_parameter_validation.py  test_callback_mixin.py  test_result.py  test_select_operator.py  test_statistics.py
alns/tools/: warnings.py
alns/weight_schemes/: ConvexWeights.py  SegmentedWeights.py  WeightScheme.py  __init__.py
alns/weight_schemes/tests/: test_segmented_weights.py  test_simple_weights.py
alns/weights/: SegmentedWeights.py  SimpleWeights.py  WeightScheme.py  __init__.py
alns/weights/tests/: test_segmented_weights.py  test_simple_weights.py  test_weights.py
docs/: README.md  conf.py  index.rst  requirements.txt
docs/source/: accept.rst  alns.rst  api.rst  conf.py  examples.rst  index.rst  other single-trajectory heuristics.rst  select.rst  stop.rst
docs/source/api/: accept.rst  alns.rst  select.rst  stop.rst
docs/source/examples/: 640.csp  ORTEC-n242-k12.sol  ORTEC-n242-k12.vrp  alns_features.ipynb  capacitated_vehicle_routing_problem.ipynb  cutting_stock_problem.ipynb  other single-trajectory heuristics.rst  permutation_flow_shop_problem.ipynb  resource_constrained_project_scheduling_problem.ipynb  travelling_salesman_problem.ipynb  xqf131.opt.tour  xqf131.tsp
docs/source/misc/: publications.rst
docs/source/setup/: contributing.rst  getting_help.rst  installation.rst  introduction_to_alns.rst  template.rst
examples/: README.md  alns_features.ipynb  capacitated_vehicle_routing_problem.ipynb  cutting_stock_problem.ipynb  mab_tsp.ipynb  permutation_flow_shop_problem.ipynb  resource_constrained_project_scheduling_problem.ipynb  tai50_20_8.txt  travelling_salesman_problem.ipynb  weight_schemes_acceptance_criteria.ipynb  xqf131.opt.tour  xqf131.tsp
examples/.ipynb_checkpoints/: travelling_salesman_problem-checkpoint.ipynb
paper/: .gitignore  compile.sh  paper.bib  paper.md
